<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".Dashboard_Fragments.Admin.SettingsFragment_admin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.Material3.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/back_icon"
                app:title="@string/app_settings"
                app:titleCentered="true"
                app:titleTextAppearance="@style/YourCustomTextAppearance" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingStart="18dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center"
                        android:text="@string/prof_sett"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_prof_btn"
                    style="@style/SettingButton"
                    android:text="@string/edit"
                    app:icon="@drawable/edit_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingStart="18dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center"
                        android:text="@string/college_code"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/coll_code_btn"
                    style="@style/SettingButton"
                    android:text="RUIACSIT-7358"
                    android:textColor="@color/primary_blue"
                    app:icon="@drawable/code_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingStart="18dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center"
                        android:text="@string/more_info"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/working_btn"
                    style="@style/SettingButton"
                    app:iconSize="20dp"
                    android:text="@string/work"
                    app:icon="@drawable/working_icon" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/about_btn"
                    style="@style/SettingButton"
                    android:text="@string/about"
                    app:icon="@drawable/about_icon" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/help_btn"
                    style="@style/SettingButton"
                    android:text="@string/help"
                    app:icon="@drawable/help_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingStart="18dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center"
                        android:text="@string/logged_in"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_out_btn"
                    style="@style/SettingButtonRed"
                    android:text="@string/log_out" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_btn"
                    style="@style/SettingButtonRed"
                    android:text="@string/delete" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>