<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.AddCollegeDetails">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Material3.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/back_icon"
            app:title="@string/dpt_det"
            app:titleTextAppearance="@style/YourCustomTextAppearance" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sub_tb"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:hint="@string/dpt_name"
                app:boxStrokeColor="@color/black"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sub_code_tb"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:layout_marginTop="9dp"
                android:hint="@string/sub_code"
                app:boxStrokeColor="@color/black"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/year_tb"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:layout_marginTop="9dp"
                android:hint="@string/year"
                app:boxStrokeColor="@color/black"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/primary_blue"
        android:fontFamily="@font/inter_medium"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>