<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up_Screens.Faculty_Student_signup_pg1">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:progressTint="@color/primary_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <!--        Back btn-->
                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/back_icon"
                    app:backgroundTint="#00000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/inter_medium"
                        android:lineHeight="26dp"
                        android:text="@string/one"
                        android:textColor="@color/primary_blue"
                        android:textSize="21sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:lineHeight="19dp"
                        android:text="@string/three_"
                        android:textColor="@color/secondary"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="32dp"
                android:paddingBottom="32dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="start"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/faculty_signup_pg1"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:scaleType="center"
                    android:src="@drawable/college_code_img" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/college_code_tb"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="18dp"
                        android:hint="@string/college_code"
                        app:boxStrokeColor="@color/black"
                        app:hintAnimationEnabled="true"
                        app:hintTextColor="@color/black"
                        app:startIconDrawable="@drawable/code_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/nxt_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/primary_blue"
                        android:enabled="true"
                        android:fontFamily="@font/inter_medium"
                        android:fontFeatureSettings="pnum, lnum"
                        android:gravity="center"
                        android:paddingStart="24dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="24dp"
                        android:paddingBottom="12dp"
                        android:text="@string/nxt"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:cornerRadius="6dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:foregroundGravity="center"
                android:text="@string/hav_acc"
                android:textColor="@color/secondary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/login"
                android:textColor="@color/primary_blue"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>